OpenAPI : set summaries, EasyJobController add deleteByName
