# iotea/src/main/java/hu/zza/iotea/controller/EasyJobController.java
@@ -5,6 +5,7 @@ import hu.zza.iotea.service.JobService;
 import java.util.List;
 import java.util.Optional;
 import lombok.AllArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
@@ -59,5 +60,11 @@ public class EasyJobController {
   @GetMapping("/run/{name}/{parameters}")
   public JobOutput runJobByNameAlias(@PathVariable String name, @PathVariable String parameters) {
     return service.runJob(name, parameters);
+  }
+
+  @GetMapping("/delete/{name}")
+  @ResponseStatus(HttpStatus.NO_CONTENT)
+  public void deleteJobByName(@PathVariable String name) {
+    service.deleteByName(name);
   }
 }
